# opengl_shaders

./: CMakeLists.txt  README.md
include/: camera.hh  cube.hh  matrix4.hh  program.hh  util.hh  vector3.hh
shaders/: bubble.frag  church.frag  clouds.frag  clouds.shd  computeShader.frag  fragment.frag  fragmentShader.frag  fragment_shader.frag  saveclouds.frag  vertexShader.frag  waterShader.frag
src/: camera.cc  main.cc  program.cc  util.cc
textures/: sky2.tga  skybox_nx.tga  skybox_ny.tga  skybox_nz.tga  skybox_px.tga  skybox_py.tga  skybox_pz.tga  tint2.tga
